<resources>
    <string name="app_name">Shortz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_string">Login</string>
    <string name="signup_string">Sign Up!</string>
    <string name="donthaveac_text">Don\'t have an account?</string>
    <string name="signupfromlogin_text">Sign up!</string>
    <string name="alreadyhaveac_text">Already have an account?</string>
    <string name="loginfromsignup_text">Login!</string>
    <string name="coep_email_string">"@coep.ac.in"</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="upload_image_string">Upload Image</string>
    <string name="update_profile_string">Update Profile</string>
    <string name="create_article_string">Create New Article</string>
    <string name="change_passoword_string">Change Password</string>
    <string name="update_passoword_string">Update Password</string>

    <string-array name="branches_array">
        <item>Civil</item>
        <item>Computer</item>
        <item>Electrical</item>
        <item>EnTC</item>
        <item>Information Technology</item>
        <item>Instrumentation</item>
        <item>Mechanical</item>
        <item>Metallurgy</item>
        <item>Planning</item>
        <item>Production</item>
    </string-array>
</resources>
