<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/shortz_background_grey"

    tools:context="seproject.pratikninadmayekar.shortz.Signup">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="134dp"
            android:layout_height="123dp"
            app:srcCompat="@drawable/shortz_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/seguisb"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_string"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/shortz_grey"
            android:layout_margin="10dp"
            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/entered_new_email"
                style="@style/edit_text_style"
                android:layout_width="150dp"
                android:hint="Email ID"
                android:inputType="text"
                android:textColorHint="@color/hint_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/shortz_grey"
                android:text="@string/coep_email_string"/>

        </LinearLayout>

        <EditText
            android:id="@+id/entered_password"
            style="@style/edit_text_style"
            android:hint="New Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_grey"/>
        <EditText
            android:id="@+id/entered_confirm_password"
            style="@style/edit_text_style"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_grey"/>

        <Button
            style="@style/regular_button_style"
            android:text="@string/signup_string"
            android:id="@+id/signup_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="9dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text_size"
                android:textColor="@color/shortz_grey"
                android:text="@string/alreadyhaveac_text"
                android:fontFamily="@font/segoeuisl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/regular_text_size"
                android:textColor="@color/shortz_blue"
                android:text="@string/loginfromsignup_text"
                android:fontFamily="@font/seguisb"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
