<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/shortz_background_grey"

    tools:context="seproject.pratikninadmayekar.shortz.Login">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="147dp"
            app:srcCompat="@drawable/shortz_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/seguisb"
            android:textColor="#000000"
            android:textSize="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/shortz_grey"
            android:layout_margin="10dp"
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/entered_username"
            style="@style/edit_text_style"
            android:hint="Email Address"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint_grey"/>

        <EditText
            android:id="@+id/entered_password"
            style="@style/edit_text_style"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_grey"/>

        <Button
            style="@style/regular_button_style"
            android:text="@string/login_string"
            android:id="@+id/login_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text_size"
                android:textColor="@color/shortz_grey"
                android:text="@string/donthaveac_text"
                android:fontFamily="@font/segoeuisl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:textSize="@dimen/regular_text_size"
                android:textColor="@color/shortz_grey"
                android:text="@string/signupfromlogin_text"
                android:fontFamily="@font/seguisb"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
