<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@color/shortz_background_grey"

    tools:context="seproject.pratikninadmayekar.shortz.CreateArticle">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/shortz_logo" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_article_string"
            android:fontFamily="@font/seguisb"
            android:textColor="@color/shortz_grey"
            android:layout_margin="10dp"
            android:textSize="24dp"
            android:paddingBottom="30dp"/>

        <EditText
            android:id="@+id/entered_article_heading"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:hint="Article Heading"
            android:inputType="text"
            android:maxLength="140"
            android:singleLine="false"
            android:textColorHint="@color/hint_grey" />

        <EditText
            android:id="@+id/entered_content"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:hint="Content"
            android:inputType="textMultiLine"
            android:maxLength="319"
            android:textColorHint="@color/hint_grey" />

        <EditText
            android:id="@+id/entered_tags"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:hint="Tags - semicolon(;) separated"
            android:inputType="text"
            android:textColorHint="@color/hint_grey"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/article_image_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/shortz_grey"
                android:text="No Image Attached"
                android:paddingLeft="15dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/seguisli"
                android:textSize="@dimen/regular_text_size"
                android:layout_alignParentLeft="true" />

            <Button
                style="@style/grey_button_style"
                android:text="@string/upload_image_string"
                android:id="@+id/upload_image_button"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <Button
            style="@style/regular_button_style"
            android:text="@string/update_profile_string"
            android:id="@+id/signup_button"
            android:padding="5dp"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>

